US7225 - 13.4 - 07/11/2013 Clearcase Merge - Discover-Card Project

--- a/Discover-Card-Phone/res/drawable/card_edit_text_holo_light.xml
+++ b/Discover-Card-Phone/res/drawable/card_edit_text_holo_light.xml
@@ -14,15 +14,21 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
+<!-- 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_enabled="true" android:state_window_focused="false"/>
-    <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_enabled="false" android:state_window_focused="false"/>
-    <item android:drawable="@drawable/card_textfield_focused_holo_light" android:state_enabled="true" android:state_focused="true"/>
-    <iten android:drawable="@drawable/card_textfield_normal_holo_light" android:state_activated="true" android:state_enabled="true" />
-    <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_enabled="true"/>
-    <item android:drawable="@drawable/card_textfield_focused_holo_light" android:state_focused="true"/>
-    <item android:drawable="@drawable/card_textfield_normal_holo_light"/>
+    <item android:drawable="@drawable/card_textfield_normal_holo_light" android:state_enabled="false" android:state_window_focused="false"/>
+    <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_enabled="true" android:state_focused="true"/>
+    <iten android:drawable="@drawable/card_textfield_filled_holo_light" android:state_activated="true" android:state_enabled="true" />
+    <item android:drawable="@drawable/card_textfield_normal_holo_light" android:state_enabled="true"/>
+    <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_focused="true"/>
+    <item android:drawable="@drawable/card_textfield_filled_holo_light"/>
+
+</selector> -->
+<selector xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:drawable="@drawable/card_textfield_filled_holo_light" android:state_focused="true"/>
+    <item android:drawable="@drawable/card_textfield_normal_holo_light" android:state_focused="false"/>
 
 </selector>
