--- a/Discover-Card-Phone/res/layout/passcode_menu_item.xml
+++ b/Discover-Card-Phone/res/layout/passcode_menu_item.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
-        android:textColor="@color/passcodeBlack" />
+        android:textColor="@color/black" />
 
     <ImageView
         android:layout_width="wrap_content"
