--- a/Discover-Card-Phone/res/values/styles.xml
+++ b/Discover-Card-Phone/res/values/styles.xml
@@ -356,8 +356,8 @@
         <item name="android:textSize">@dimen/passcode_digit_text</item>
         <item name="android:typeface">serif</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textColor">@color/black</item>
         <item name="android:gravity">center</item>
+        <item name="android:cursorVisible">false</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:focusable">true</item>
         <item name="android:clickable">false</item>
@@ -375,61 +375,9 @@
 
     <style name="PasscodeGuidelines">
         <item name="android:textSize">@dimen/passcode_message_text</item>
-        <item name="android:textColor">@color/passcodeBlue</item>
+        <item name="android:textColor">@color/blue</item>
         <item name="android:layout_gravity">center</item>
-        <item name="android:text">@string/nomatch_pass</item>
     </style>
-
-    <style name="ScreenRoot">
-        <item name="android:background">@color/white</item>
-        <item name="android:layout_height">fill_parent</item>
-    </style>
-
-    <style name="Spacer">
-        <item name="android:layout_width">1.0px</item>
-        <item name="android:layout_height">1.0px</item>
-        <item name="android:layout_weight">1.0</item>
-    </style>
-
-    <style name="PasscodeDigitParent">
-        <item name="android:layout_gravity">center</item>
-        <item name="android:layout_marginTop">@dimen/passcode_vpad</item>
-    </style>
-
-    <style name="PasscodeOverlay">
-        <item name="android:background">@color/white</item>
-        <item name="android:paddingLeft">20dp</item>
-        <item name="android:paddingRight">20dp</item>
-        <item name="android:paddingTop">20dp</item>
-        <item name="android:orientation">vertical</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">fill_parent</item>
-    </style>
-
-    <style name="PasscodeOverlayTitle">
-        <item name="android:layout_marginBottom">16dp</item>
-        <item name="android:textSize">25sp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:textColor">@color/passcodeBlack</item>
-    </style>
-
-    <style name="PasscodeOverlayParagraph">
-        <item name="android:layout_marginBottom">12dp</item>
-        <item name="android:textSize">14sp</item>
-        <item name="android:textColor">@color/passcodeBlack</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-    </style>
-
-    <style name="PasscodeHR">
-        <item name="android:background">#9C9C9C</item>
-        <item name="android:layout_marginTop">12dp</item>
-        <item name="android:layout_marginBottom">12dp</item>
-        <item name="android:layout_width">fill_parent</item>
-        <item name="android:layout_height">1dp</item>
-    </style>
-    
     <!-- Passcode Styles end -->
 
 </resources>
