--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -82,7 +82,7 @@
         <item name="android:textSize">17sp</item>
         <item name="android:typeface">serif</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:cursorVisible">false</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_gravity">center</item>
@@ -96,5 +96,6 @@
         <item name="android:digits">0123456789</item>
         <item name="android:keepScreenOn">true</item>
         <item name="android:inputType">textPassword</item>
+        <item name="android:imeOptions">actionNone|flagNoExtractUi|flagNoAccessoryAction|flagNoEnterAction</item>
     </style>
 </resources>
