US7225 - 13.4 - 07/12/2013 Clearcase Merge - Discover-Card Project

--- a/Discover-Card-Phone/res/layout/register_create_credentials.xml
+++ b/Discover-Card-Phone/res/layout/register_create_credentials.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical" >
 
-    <com.discover.mobile.common.nav.HeaderProgressIndicator
+    <com.discover.mobile.card.common.uiwidget.HeaderProgressIndicator
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -342,7 +342,7 @@
                 android:paddingRight="20dp"
                 android:text="@string/submit_text"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <RelativeLayout
