--- a/Discover-Card-Phone/res/layout/register_create_password.xml
+++ b/Discover-Card-Phone/res/layout/register_create_password.xml
@@ -3,7 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <com.discover.mobile.common.nav.HeaderProgressIndicator
+    <com.discover.mobile.card.common.uiwidget.HeaderProgressIndicator
         android:id="@+id/header"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
@@ -204,7 +204,7 @@
                 android:paddingRight="20dp"
                 android:text="@string/submit_text"
                 android:textColor="@color/white"
-                android:textSize="20sp"
+                android:textSize="20dp"
                 android:textStyle="bold" />
 
             <RelativeLayout
