--- a/Discover-Card-Phone/res/layout/strong_auth_enter_info.xml
+++ b/Discover-Card-Phone/res/layout/strong_auth_enter_info.xml
@@ -32,6 +32,7 @@
            	android:background="@drawable/card_logout_button"
             android:text="@string/log_out" 
             android:textSize="12dp"
+            android:textColor="@color/sub_copy"
             />
 
         <ImageView
