--- a/Discover-Card-Phone/res/layout/whats_new_layout1.xml
+++ b/Discover-Card-Phone/res/layout/whats_new_layout1.xml
@@ -6,10 +6,10 @@
 	android:fadingEdge="none"
     android:overScrollMode="never">
 	
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout 
         android:id="@+id/whats_new_relative"
         android:layout_width="match_parent"
-        android:layout_height="521dp"
+        android:layout_height="wrap_content"
         android:background="@drawable/light_gray_bkgrd"
         android:focusable="true"
         android:focusableInTouchMode="true" >       
