--- a/Discover-Bank-Phone/res/values/styles.xml
+++ b/Discover-Bank-Phone/res/values/styles.xml
@@ -86,6 +86,7 @@
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:layout_gravity">center</item>
+        <item name="android:focusable">true</item>
         <item name="android:clickable">false</item>
         <item name="android:longClickable">false</item>
         <item name="android:layout_width">60dp</item>
