DE6829  - Transfer Money - landscape view shows unattractive formatting DE6824 - "Multiple Pin" text in Pin Cluster What's New page is missing quotations. DE6823  - Divider line still shows underneath greeting on Account Summary. DE6829  - Transfer Money - landscape view shows unattractive formatting
Tested:
- Verified that the divider line is not shown under greeting with customer with and no accounts for both portrait and landscape orientations
- Verified "Multiple Pin" with quotes is shown in whats new
- Verified headers are not shown where there is no transfers transactions under review transfers for completed, cancelled, and scheduled
- Verified headers are shown when there are transfer transactions under review transfers for completed, cancelled, and scheduled
- Verified that the ime option is set correctly for the transaction field in the Bank Frequency widget

--- a/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
+++ b/Discover-Bank-Phone/res/layout/bank_frequency_detail_view.xml
@@ -207,7 +207,7 @@
             android:layout_marginBottom="@dimen/forms_inner_padding"
             android:layout_weight="2.25"
             android:gravity="center_vertical"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionDone|flagNoExtractUi"
             android:textCursorDrawable="@null" 
             android:clickable="false"
             android:enabled="false"/>
@@ -286,7 +286,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2.25"
-            android:imeOptions="actionDone"
+            android:imeOptions="actionDone|flagNoExtractUi"
             android:clickable="false"
             android:enabled="false"
             />
