--- a/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
+++ b/Discover-Bank-Phone/res/layout/faq_detail_fragment.xml
@@ -14,14 +14,32 @@
 	        android:layout_height="wrap_content"
 	        android:orientation="vertical" >
 	
-	        <TextView
-	            android:id="@+id/title"
-	            style="@style/title_copy"
-	            android:layout_width="wrap_content"
-	            android:layout_height="wrap_content"
-	            android:padding="@dimen/forms_inner_padding"
-	            android:text="@string/edit" />
-	
+	        <LinearLayout 
+	            android:layout_width="fill_parent"
+        		android:layout_height="wrap_content"
+        		android:orientation="horizontal"
+        		android:layout_marginLeft="@dimen/forms_inner_padding">
+        		
+	            <ImageView
+		            android:id="@+id/previous_button"
+		            android:layout_width="@dimen/min_touch_region"
+		            android:layout_height="@dimen/min_touch_region"
+		            android:background="@drawable/page_control_background"
+		            android:layout_gravity="center_vertical"
+		            android:contentDescription="@string/empty"
+		            android:padding="@dimen/min_button_padding"
+		            android:src="@drawable/left_page_control_arrow" />
+        		
+		        <TextView
+		            android:id="@+id/title"
+		            style="@style/title_copy"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:padding="@dimen/forms_inner_padding"
+		            android:text="@string/edit" />
+		        
+			</LinearLayout>
+			
 	        <LinearLayout
 	            android:id="@+id/content_table"
 	            android:layout_width="fill_parent"
@@ -31,7 +49,7 @@
 	        </LinearLayout>
 	    </LinearLayout>
 	    
-	     <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
+	    <com.discover.mobile.bank.ui.widgets.BankLayoutFooter
 	        android:id="@+id/bank_footer"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
