DE6821 - Fixed an issue where the atm locator search bar was not turning orange when tapped.
Test Cases:
- Validated the search button still worked.
- Validated the bar turned from grey to orange to grey.

--- a/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
+++ b/Discover-Bank-Phone/res/layout/atm_locator_map_search_bar.xml
@@ -59,6 +59,7 @@
 
         <com.discover.mobile.bank.atm.AtmSearchEditText
             android:id="@+id/search_box"
+            style="@style/common_edittext_grey_line"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_alignParentTop="true"
@@ -69,7 +70,6 @@
             android:layout_marginTop="@dimen/between_related_elements_padding"
             android:layout_toLeftOf="@+id/help_dummy"
             android:layout_toRightOf="@+id/search_show"
-            android:background="@drawable/common_textfield_default_grey"
             android:cursorVisible="true"
             android:drawableLeft="@drawable/magnifying_glass"
             android:drawablePadding="@dimen/between_related_elements_padding"
